--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,28 @@
     <string name="title_activity_main_notify_appointment">MainNotifyAppointment</string>
     <string name="title_activity_main_appointment_notify">MainAppointmentNotify</string>
 
+    MainMedication
+    <string name="What_medication_search_you">Qual medication você procura?</string>
+    <string name="medicationIsNullOrEmpty">Você não tem nenhum medicamento adicionado ainda!!</string>
+    <string name="nextMedication">Sua próxima medicação será: </string>
+
+    InsertMedication
+    <string name="What_medication_you_take">Qual medicação você irá tomar?</string>
+    <string name="Do_you_quantity_in_the_stock">Você tem quantos no estoque?</string>
+    <string name="What_first_time_you_take_medication">Qual a primeira hora que você irá tomar o remédio?</string>
+    <string name="What_interval_hour">De quantas em quantas horas?</string>
+    <string name="What_interval_days">De quantos em quantos dias?</string>
+    <string name="You_take_medication_in_days_or_hours">Você toma a cada x horas ou a cada x dias?</string>
+    <string name="Hours">Horas</string>
+    <string name="Days">Dias</string>
+    <string name="Pills">Pílula</string>
+    <string name="Drop">Gota</string>
+    <string name="How_many_mg">Quantas milígramas?</string>
+    <string name="How_many_pills">Quantas pílulas?</string>
+    <string name="next">Continuar</string>
+    <string name="confirm">Confirmar</string>
+
+    Appointments
     <string name="appointmentHistoryIsNullOrEmpty">Sem nenhuma ida ao médico passada.</string>
+    <string name="appointmentIsNullOrEmpty">Sem nenhuma ida próxima ao médico.</string>
 </resources>
