--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,5 +29,5 @@
     <string name="next_medication_will_be">Your next medication will be: </string>
     <string name="next_hour">hours and</string>
     <string name="next_minute">minutes</string>
-    <string name="rest">Rest</string>
+    <string name="left">In</string>
 </resources>
