--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,6 @@
     <string name="next_medication_will_be">Sua próxima medicação será:</string>
     <string name="next_hour">horas e</string>
     <string name="next_minute">minutos</string>
-    <string name="rest">Faltam</string>
+    <string name="left">Faltam</string>
 
 </resources>
