--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,6 +22,9 @@
     <string name="How_many_pills">How many pills?</string>
     <string name="next">Next</string>
     <string name="confirm">Confirm</string>
+    <string name="fill_everything">Fill everything!</string>
+    <string name="fill_every_fields">Fill every fields!</string>
+    <string name="try_again">Try again</string>
     <!-- Appointments -->
     <string name="appointmentHistoryIsNullOrEmpty">No past doctors appointments.</string>
     <string name="appointmentIsNullOrEmpty">No upcoming doctors appointments.</string>
