--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,6 +22,9 @@
     <string name="How_many_pills">¿Cuántas píldoras?</string>
     <string name="next">Continuar</string>
     <string name="confirm">Confirmar</string>
+    <string name="fill_everything">¡Rellena todo!</string>
+    <string name="fill_every_fields">¡Rellena todos los campos!</string>
+    <string name="try_again">Inténtalo de nuevo</string>
 
     <!-- Appointments -->
     <string name="appointmentHistoryIsNullOrEmpty">Sin citas médicas pasadas.</string>
