--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="How_many_pills">Quantas pílulas?</string>
     <string name="next">Continuar</string>
     <string name="confirm">Confirmar</string>
+    <string name="fill_everything">Preencha tudo!</string>
+    <string name="fill_every_fields">Preencha todos os campos!</string>
+    <string name="try_again">Tente novamente</string>
+
 
     Appointments
     <string name="appointmentHistoryIsNullOrEmpty">Sem nenhuma ida ao médico passada.</string>
@@ -36,5 +40,6 @@
     <string name="next_hour">horas e</string>
     <string name="next_minute">minutos</string>
     <string name="left">Faltam</string>
+    
 
 </resources>
