--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -42,7 +42,8 @@
     <string name="appointmentIsNullOrEmpty">Sin próximas citas médicas.</string>
     <!-- MainMedication -->
     <string name="next_medication_will_be">Tu próximo medicamento será: </string>
-    <string name="next_hour">horas y</string>
+    <string name="next_hour">horas</string>
+    <string name="and">y</string>
     <string name="next_minute">minutos</string>
     <string name="left">Restan</string>
 
